--- a/index.html
+++ b/index.html
@@ -4,56 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pharmacy Sales Dashboard</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background: linear-gradient(135deg, #111827 0%, #1e293b 100%);
-            color: #e5e7eb;
-        }
-        select[multiple] {
-            background-color: #1f2937;
-            border: 1px solid #374151;
-            color: #d1d5db;
-            border-radius: 0.5rem;
-            padding: 0.75rem;
-            transition: all 0.2s;
-        }
-        select[multiple]:focus {
-            border-color: #38bdf8; /* Sky Blue */
-            box-shadow: 0 0 0 3px rgba(56, 189, 248, 0.4);
-            outline: none;
-        }
-        select[multiple] option {
-            padding: 0.5rem 0.75rem;
-            border-radius: 0.375rem;
-            margin-top: 0.25rem;
-        }
-        select[multiple] option:checked {
-            background-color: #0ea5e9; /* Sky Blue */
-            color: white;
-        }
-        .recharts-tooltip-cursor {
-            fill: rgba(255, 255, 255, 0.1);
-        }
-    </style>
 <script type="importmap">
 {
   "imports": {
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "recharts": "https://aistudiocdn.com/recharts@^3.3.0",
-    "papaparse": "https://aistudiocdn.com/papaparse@^5.5.3"
+    "vite": "https://aistudiocdn.com/vite@^7.1.12",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
+    "papaparse": "https://aistudiocdn.com/papaparse@^5.5.3",
+    "recharts": "https://aistudiocdn.com/recharts@^3.3.0"
   }
 }
 </script>
 </head>
 <body class="antialiased">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
