--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     "papaparse": "https://aistudiocdn.com/papaparse@^5.5.3",
     "recharts": "https://aistudiocdn.com/recharts@^3.3.0",
     "jspdf": "https://aistudiocdn.com/jspdf@^2.5.1",
-    "jspdf-autotable": "https://aistudiocdn.com/jspdf-autotable@^3.8.2"
+    "jspdf-autotable": "https://aistudiocdn.com/jspdf-autotable@^3.8.2",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^0.14.0"
   }
 }
 </script>
